removed module-info.java added uber-jar packaging