@@ -1,2 +1,5 @@
 # JsonToCsv21
 JavaFX 21 app for converting JSON to CSV
+
+### VM options
+`--module-path c:/Users/sound/OneDrive/Projects/javafx-sdk-21.0.8/lib  --add-modules javafx.controls,javafx.fxml`
